# ULTRALYTICS

examples/: pyproject.toml
examples/YOLO-Interactive-Tracking-UI/: interactive_tracker.py  interactive_tracker_output.avi
